# linux-compile-homework

./: Makefile.am  README.md  calc.h  configure.ac  main.c  operations.c
