AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = calcproj
calcproj_SOURCES = main.c operations.c calc.h


clean-all: distclean
	rm -rf calcproj-0.1.tar.gz
	rm -rf aclocal.m4 configure~
	rm -rf autom4te.cache compile configure depcomp .deps/ install-sh Makefile.in missing 
	rm -f /usr/local/bin/calcproj
	rm -f /usr/local/include/calc.h
